@@ -1,22 +1,28 @@
 package com.github.saphyra.apphub.service.skyxplore.game.service.planet.surface.building.overview;
 
 import com.github.saphyra.apphub.api.skyxplore.response.game.planet.PlanetBuildingOverviewDetailedResponse;
-import com.github.saphyra.apphub.service.skyxplore.game.domain.map.Building;
-import com.github.saphyra.apphub.service.skyxplore.game.domain.map.Surface;
+import com.github.saphyra.apphub.lib.skyxplore.data.gamedata.SurfaceType;
+import com.github.saphyra.apphub.service.skyxplore.game.domain.data.GameData;
+import com.github.saphyra.apphub.service.skyxplore.game.domain.data.building.Building;
+import com.github.saphyra.apphub.service.skyxplore.game.domain.data.building.Buildings;
+import com.github.saphyra.apphub.service.skyxplore.game.domain.data.surface.Surface;
+import com.github.saphyra.apphub.service.skyxplore.game.domain.data.surface.Surfaces;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
 
 @ExtendWith(MockitoExtension.class)
-public class BuildingDetailsMapperTest {
+class BuildingDetailsMapperTest {
+    private static final UUID PLANET_ID = UUID.randomUUID();
+    private static final UUID SURFACE_ID = UUID.randomUUID();
     private static final String DATA_ID = "data-id";
 
     @Mock
@@ -26,25 +32,36 @@ public class BuildingDetailsMapperTest {
     private BuildingDetailsMapper underTest;
 
     @Mock
-    private Surface surfaceWithoutBuilding;
+    private GameData gameData;
 
     @Mock
-    private Surface surfaceWithBuilding;
+    private PlanetBuildingOverviewDetailedResponse response;
+
+    @Mock
+    private Buildings buildings;
+
+    @Mock
+    private Surfaces surfaces;
 
     @Mock
     private Building building;
 
     @Mock
-    private PlanetBuildingOverviewDetailedResponse overviewDetailedResponse;
+    private Surface surface;
 
     @Test
-    public void createBuildingDetails() {
-        given(surfaceWithBuilding.getBuilding()).willReturn(building);
+    void createBuildingDetails() {
+        given(gameData.getBuildings()).willReturn(buildings);
+        given(buildings.getByLocation(PLANET_ID)).willReturn(List.of(building));
+        given(gameData.getSurfaces()).willReturn(surfaces);
+        given(building.getSurfaceId()).willReturn(SURFACE_ID);
+        given(surfaces.findBySurfaceId(SURFACE_ID)).willReturn(surface);
+        given(surface.getSurfaceType()).willReturn(SurfaceType.CONCRETE);
         given(building.getDataId()).willReturn(DATA_ID);
-        given(buildingDetailMapper.createBuildingDetail(DATA_ID, Arrays.asList(building))).willReturn(overviewDetailedResponse);
+        given(buildingDetailMapper.createBuildingDetail(DATA_ID, List.of(building))).willReturn(response);
 
-        List<PlanetBuildingOverviewDetailedResponse> result = underTest.createBuildingDetails(Arrays.asList(surfaceWithBuilding, surfaceWithoutBuilding));
+        List<PlanetBuildingOverviewDetailedResponse> result = underTest.createBuildingDetails(gameData, PLANET_ID, SurfaceType.CONCRETE);
 
-        assertThat(result).containsExactly(overviewDetailedResponse);
+        assertThat(result).containsExactly(response);
     }
 }
