@@ -1,44 +1,32 @@
 package com.github.saphyra.apphub.service.skyxplore.lobby.service.member;
 
-import com.github.saphyra.apphub.api.skyxplore.model.SkyXploreCharacterModel;
-import com.github.saphyra.apphub.api.skyxplore.response.LobbyMemberResponse;
-import com.github.saphyra.apphub.api.skyxplore.response.LobbyMemberStatus;
-import com.github.saphyra.apphub.api.skyxplore.response.LobbyMembersResponse;
-import com.github.saphyra.apphub.lib.common_domain.BiWrapper;
-import com.github.saphyra.apphub.lib.common_util.collection.CollectionUtils;
-import com.github.saphyra.apphub.service.skyxplore.lobby.dao.Alliance;
+import com.github.saphyra.apphub.api.skyxplore.response.lobby.LobbyMemberResponse;
+import com.github.saphyra.apphub.service.skyxplore.lobby.dao.Invitation;
 import com.github.saphyra.apphub.service.skyxplore.lobby.dao.Lobby;
 import com.github.saphyra.apphub.service.skyxplore.lobby.dao.LobbyDao;
-import com.github.saphyra.apphub.service.skyxplore.lobby.dao.Member;
-import com.github.saphyra.apphub.service.skyxplore.lobby.proxy.CharacterProxy;
+import com.github.saphyra.apphub.service.skyxplore.lobby.dao.LobbyMember;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
 
 @ExtendWith(MockitoExtension.class)
-public class LobbyMemberQueryServiceTest {
+class LobbyMemberQueryServiceTest {
     private static final UUID USER_ID = UUID.randomUUID();
-    private static final String ALLIANCE_NAME = "alliance-name";
-    private static final UUID HOST_ID = UUID.randomUUID();
-    private static final UUID INVITED_USER_ID = UUID.randomUUID();
-    private static final String INVITED_CHARACTER_NAME = "invited-character-name";
 
     @Mock
     private LobbyDao lobbyDao;
 
     @Mock
-    private LobbyMemberResponseConverter converter;
-
-    @Mock
-    private CharacterProxy characterProxy;
+    private LobbyMemberToResponseConverter converter;
 
     @InjectMocks
     private LobbyMemberQueryService underTest;
@@ -47,42 +35,27 @@ public class LobbyMemberQueryServiceTest {
     private Lobby lobby;
 
     @Mock
-    private Member member;
+    private LobbyMember lobbyMember;
 
     @Mock
-    private Member hostMember;
+    private Invitation invitation;
 
     @Mock
-    private LobbyMemberResponse lobbyMemberResponse;
+    private LobbyMemberResponse memberResponse;
 
     @Mock
-    private LobbyMemberResponse hostMemberResponse;
-
-    @Mock
-    private Alliance alliance;
+    private LobbyMemberResponse invitationResponse;
 
     @Test
-    public void getMembers() {
+    void getMembers() {
         given(lobbyDao.findByUserIdValidated(USER_ID)).willReturn(lobby);
-        given(lobby.getMembers()).willReturn(CollectionUtils.toMap(
-            new BiWrapper<>(USER_ID, member),
-            new BiWrapper<>(HOST_ID, hostMember)
-        ));
-        given(converter.convertMember(member, Arrays.asList(alliance))).willReturn(lobbyMemberResponse);
-        given(converter.convertMember(hostMember, Arrays.asList(alliance))).willReturn(hostMemberResponse);
-        given(lobby.getHost()).willReturn(HOST_ID);
-        given(member.getUserId()).willReturn(USER_ID);
-        given(hostMember.getUserId()).willReturn(HOST_ID);
-        given(lobby.getAlliances()).willReturn(Arrays.asList(alliance));
-        given(lobby.getExpectedPlayers()).willReturn(Arrays.asList(USER_ID, INVITED_USER_ID));
-        given(characterProxy.getCharacter(INVITED_USER_ID)).willReturn(SkyXploreCharacterModel.builder().name(INVITED_CHARACTER_NAME).build());
+        given(lobby.getMembers()).willReturn(Map.of(UUID.randomUUID(), lobbyMember));
+        given(converter.convertMember(lobbyMember)).willReturn(memberResponse);
+        given(lobby.getInvitations()).willReturn(List.of(invitation));
+        given(converter.convertInvitation(invitation)).willReturn(invitationResponse);
 
-        given(alliance.getAllianceName()).willReturn(ALLIANCE_NAME);
+        List<LobbyMemberResponse> result = underTest.getMembers(USER_ID);
 
-        LobbyMembersResponse result = underTest.getMembers(USER_ID);
-
-        assertThat(result.getAlliances()).containsExactly(ALLIANCE_NAME);
-        assertThat(result.getMembers()).containsExactlyInAnyOrder(lobbyMemberResponse, LobbyMemberResponse.builder().userId(INVITED_USER_ID).status(LobbyMemberStatus.INVITED).characterName(INVITED_CHARACTER_NAME).build());
-        assertThat(result.getHost()).isEqualTo(hostMemberResponse);
+        assertThat(result).containsExactlyInAnyOrder(memberResponse, invitationResponse);
     }
 }
